# my_face_recognition

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  build_app.sh  kmodel使用说明.md  yolov8n-face_k230_kmodel_manual.md
archive/: 260403_VIDEO_DISPLAY_DEBUG_SUMMARY.md  260407_THREE_PROCESS_CHANGELOG.md  260408_RTSMART_SINGLE_UART_CHANGELOG.md  260409_MIGRATION_TO_K230_SDK.md  260412_FACE_ANTISPOOF_FAS_TEST_CHANGELOG.md  260414_FACE_ANTISPOOF_INTEGRATION_CHANGELOG.md  260418_MIGRATION_TO_K230_SDK.md  260419_SINGLE_PROCESS_EXIT_AND_OSD_FIXES_CHANGELOG.md  260419_THREE_PROCESS_OSD_AND_INFER_SYNC_CHANGELOG.md  260420_GHOSTFACENET_NHWC_FIX.md  260423_FACE_GATEWAY_USAGE_AND_REMOTE_TEST_PLAN.md  260425_NETWORK_COMMUNICATION_IMPLEMENTATION_AND_FIXES.md  260425_WSL_PORTPROXY_AND_MQTT_CONNECTIVITY_FIX.md  260502_RECOGNITION_HYSTERESIS_AND_EMA_CHANGELOG.md  260511_THREE_PROCESS_PERF_OPTIMIZATION_AND_LIVENESS_REGRESSION_CHANGELOG.md  260513_BOARD_TOUCH_REGISTRATION_UI_CHANGELOG.md  260513_FACE_EVENT_LED_DOOR_STATUS_CHANGELOG.md  260515_1_BOARD_TOUCH_REGISTRATION_UI_SHARED_BUFFER_CHANGELOG.md  260515_2_BOARD_TOUCH_INPUT_DETECTION_FIX_CHANGELOG.md  260515_3_BOARD_TOUCH_MANAGEMENT_AUTH_CHANGELOG.md  260515_4_WEB_MANAGEMENT_AUTH_CHANGELOG.md  260515_5_SCRFD_MODEL_MIGRATION_CHANGELOG.md  BIG_LITTLE_GUIDE.md  OUTSIDE_MY_FACE_RECOGNITION_IN_SDK.md  scrfd_kmodel使用说明.md
docs/: WLAN.md  ssh-scp.md
linux_bridge/: Makefile  README.md  build_face_netd.sh  face_netd.ini  main.cpp
linux_bridge/scripts/: gen_ui_admin_pin_hash.py  migrate_tf_face_logs_flat.sh
linux_bridge/ui/: k230_port.cpp  k230_port.h  lv_conf.h  ui_runtime.cpp  ui_runtime.h
models_src/: build_fas_kmodel.py  make_static_onnx.py  prepare_calib_npy.py
models_src/fas/: best_model_static.onnx
server_pc/: .dockerignore  .env  Dockerfile  Dockerfile.prebuilt  build-web.cmd  build-web.sh  docker-compose.yml  requirements.txt
server_pc/app/: __init__.py  main.py
server_pc/static/: app.js  index.html  style.css
server_pc/static/assets/: index-B-vSpde4.css  index-BYnPjP_r.js  index-CaF1C-W9.js  index-E_L2TZ17.css
server_pc/web/: README.md  index.html  package.json  vite.config.ts
server_pc/web/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
src/: CMakeLists.txt  ai_base.cc  ai_base.h  ai_utils.cc  ai_utils.h  attendance_log.cc  attendance_log.h  door_control.cc  door_control.h  door_control_config.h  face_ai_main.cc  face_antispoof.cc  face_antispoof.h  face_ctrl_main.cc  face_detection.cc  face_detection.h  face_detection_common.h  face_detection_scrfd.cc  face_detection_scrfd.h  face_event_main.cc  face_recognition.cc  face_recognition.h  face_video_main.cc  fas_test.cc  ipc_lwp_syscall.c  ipc_lwp_user.h  ipc_osd_draw.cc  ipc_osd_draw.h  ipc_proto.h  ipc_shm.cc  ipc_shm.h  main.cc  main_scrfd.cc  perf_stats.h  setting.h  ui_overlay_shared.h  video_pipeline.cc  video_pipeline.h
src/little/: CMakeLists.txt  README.md
src/little/src/: face_gateway_protocol.h  main.cpp
utils/: face_antispoof.kmodel  mobilefacenet_v2_k230_ptq.kmodel  run.sh  run_3process.sh  run_face3.sh  run_fas_test.sh  scrfd_2.5g_bnkps_shape640x640_k230.kmodel  scrfd_500m_bnkps_shape640x640_k230.kmodel  watchdog_face3.sh  yolov8n-face_no_sigmoid_k230_uint8.kmodel
